<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Auto Light</string>
    <string name="settings">Settings</string>
    <string name="brightness_c">Brightness:</string>
    <string name="m_always">Always</string>
    <string name="m_portrait">Portrait only</string>
    <string name="m_unlock">On screen unlock/rotate</string>
    <string name="stop">STOP</string>
    <string name="get_data">CHECK CURRENT LEVELS</string>
    <string name="show_config">SHOW CONFIGURATION</string>
    <string name="hide_config">HIDE CONFIGURATION</string>
    <string name="service_running">Service is running</string>
    <string name="service_stopped">Service stopped</string>
    <string name="work_mode_c">Work mode:</string>
    <string name="start">START</string>
    <string name="sensor_c">Sensor:</string>
    <string name="save_settings">SAVE SETTINGS</string>
    <string name="permission_request">This app requires permission to control screen brightness.\n\nPlease allow modifying system settings for the \"Auto Light\".</string>
    <string name="starting_service">Starting service</string>
    <string name="m_landscape">Landscape only</string>
    <string name="notification_title">Auto Light Service is active</string>
    <string name="notification_text">Managing screen brightness</string>
    <string name="fine_tuning_section">Adaptive brightness algorithm fine-tuning:</string>
    <string name="sensitivity">Sensitivity: higher means less frequent updates.</string>
    <string name="minimum_change">Minimum Change: ignore tiny lux fluctuations.</string>
    <string name="smoothing_duration">Smoothing Duration: longer means smoother, but slower response.</string>
    <string name="quick_react_lux">Quick React (Lux): bypass smoothing if brightness changes by this value.</string>
    <string name="quick_react_percent">Quick React (%): bypass smoothing if brightness changes by this percentage.</string>
	<string name="env_filtering">Environment Filtering</string>
    <string name="env_filter_desc">Adjusts spike rejection (Low/Med/High). Higher settings filter more noise but react slower.</string>
</resources>
